# buildtools

./: BUILD.bazel
api_proto/: BUILD.bazel
build_proto/: BUILD.bazel
buildifier/: BUILD.bazel
buildifier/npm/: BUILD.bazel  package.json
buildifier/utils/: BUILD.bazel
buildifier2/: BUILD.bazel
buildozer/: BUILD.bazel  main.go
buildozer/npm/: BUILD.bazel  package.json
bzlenv/: BUILD.bazel
config/: BUILD.bazel
convertast/: BUILD.bazel
deps_proto/: BUILD.bazel
differ/: BUILD.bazel
edit/: BUILD.bazel
extra_actions_base_proto/: BUILD.bazel
file/: BUILD.bazel
generatetables/: BUILD.bazel
labels/: BUILD.bazel
lang/: BUILD.bazel
tables/: BUILD.bazel
testutils/: BUILD.bazel
unused_deps/: BUILD.bazel
warn/: BUILD.bazel
wspace/: BUILD.bazel
